# jaxtorch

./: .gitignore  COPYING  README.md  demo.ipynb  init.py  main.py  module.py  pyproject.toml  requirements.txt  setup.py  test_nn.py
jaxtorch/: __init__.py  _util.py  cbor.py  core.py  image.py  init.py  module.py  monkeypatches.py  nn.py  pt.py
jaxtorch/nn/: __init__.py  functional.py  modules.py
scripts/: demo.py  gpt.py  main.py  test.py  train_gpt.py
test/: test_buffers.py  test_image.py  test_init.py  test_modules.py  test_nn.py  test_serialization.py
