[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxtorch"
dynamic = ["version"]
description = "A jax based nn library"
readme = "README.md"
authors = [
    { name = "Emily Shepperd" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

dependencies = ["numpy", "jax>=0.4.38"]

[dependency-groups]
test = ["pytest", "torch", "cbor2", "jax[cuda12]", "einops"]
demo = ["tqdm", "optax", "jax[cuda12]", "ipykernel"]

[project.urls]
Homepage = "https://github.com/nshepperd/jaxtorch"

[tool.hatch.version]
path = "jaxtorch/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["jaxtorch"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]